--- a/bricked.cabal
+++ b/bricked.cabal
@@ -26,6 +26,9 @@ executable example
   ghc-options:           -threaded
   default-language:      Haskell2010
 
+  other-modules:
+    Data.List.Zipper
+
   build-depends:
       aeson              >= 2.0   && < 3
     , base               >= 4.16  && < 4.17
