--- a/bricked.cabal
+++ b/bricked.cabal
@@ -7,7 +7,7 @@ build-type:              Simple
 
 library
   hs-source-dirs:        src
-  default-language:      Haskell2010
+  default-language:      GHC2021
 
   build-depends:
       base
@@ -15,11 +15,21 @@ library
     , brick
     , containers
     , data-fix
+    , mtl
     , text
+    , transformers
     , vector
+    , vty
+
+  exposed-modules:
+    Bricked.Expr
 
   default-extensions:
+    BlockArguments
+    DataKinds
     ImportQualifiedPost
+    LambdaCase
+    StrictData
 
   other-extensions:
     OverloadedStrings
@@ -28,7 +38,7 @@ executable example
   hs-source-dirs:        example
   main-is:               Main.hs
   ghc-options:           -threaded
-  default-language:      Haskell2010
+  default-language:      GHC2021
 
   other-modules:
     Data.List.Zipper
@@ -48,22 +58,4 @@ executable example
   default-extensions:
     ImportQualifiedPost
     BlockArguments
-
-executable counter
-  hs-source-dirs:        counter
-  main-is:               Main.hs
-  ghc-options:           -threaded
-  default-language:      Haskell2010
-
-  build-depends:
-      base
-    , brick
-    , bytestring
-    , cursor
-    , text
-    , time
-    , vty
-
-  default-extensions:
-    ImportQualifiedPost
-    BlockArguments
+    StrictData
